# glaceon

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Glaceon.sln  README.md  vcpkg.json
Glaceon/: Application.cpp  Application.h  Base.h  CMakeLists.txt  Glaceon.cpp  Glaceon.h  Glaceon.vcxproj  Glaceon.vcxproj.filters  Logger.cpp  Logger.h  Scene.cpp  Scene.h  SquareMesh.cpp  SquareMesh.h  StarMesh.cpp  StarMesh.h  TriangleMesh.cpp  TriangleMesh.h  Utils.cpp  Utils.h  VertexBufferCollection.cpp  VertexBufferCollection.h  VulkanAPI.cpp  VulkanAPI.h  dllmain.cpp  framework.h  pch.h
Glaceon/Assimp/: AssimpImporter.cpp  AssimpImporter.h  AssimpModel.cpp  AssimpModel.h
Glaceon/Core/: Base.h  FreeListAllocator.cpp  FreeListAllocator.h  Interface_Allocator.h  LinearAllocator.cpp  LinearAllocator.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  MemorySubsystem.cpp  MemorySubsystem.h  PoolAllocator.cpp  PoolAllocator.h  RingAllocator.cpp  RingAllocator.h  StackAllocator.cpp  StackAllocator.h
Glaceon/Core/Memory/: FreeListAllocator.cpp  LinearAllocator.cpp  LinearAllocator.h  MemorySubsystem.cpp  MemorySubsystem.h  PoolAllocator.cpp  PoolAllocator.h  RingAllocator.cpp  StackAllocator.cpp  StackAllocator.h
Glaceon/Profiler/: InstrumentationTimer.cpp  InstrumentationTimer.h
Glaceon/VulkanRenderer/: VulkanBackend.cpp  VulkanBackend.h  VulkanBase.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSync.cpp  VulkanSync.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h
SandboxApp/: CMakeLists.txt  Game.cpp  Game.h  SandboxApp.vcxproj  game.cpp  game.h
docs/: Assimp.md  BindingResources.md  BindingResources.txt  subsystems.md  subsystems.txt  vulkan_overview.md  vulkan_overview.txt
models/: DefaultGreenCube.blend  DefaultGreenCube.glb  DefaultGreenCube.mtl  basic_brickCube.mtl  bloons_level.blend  bloons_level.glb
shaders/: compile_shaders.py  shader.frag  shader.vert  test_shader.frag  test_shader.vert
